--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "cfonts": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.18.3",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "sequelize": "^5.22.5"
   }
 }
